fixed jumping notes

--- a/stickynote.css
+++ b/stickynote.css
@@ -1,8 +1,6 @@
 body {
     margin: auto;
     background: #ffff;
-    justify-content: center;
-    align-items: center;
 }
 
 #home {
@@ -13,7 +11,6 @@ body {
 }
 
 .note{
-    background-color: #f0ff6c;
     padding: 20px;
     height: 100px;
 }
@@ -25,17 +22,18 @@ body {
     padding: 10px;
 }
 
-.initialPosition {
-    right: 50px; /* Set the initial left position */
-    top: 50px;  /* Set the initial top position */
-  }
 
-.createNote{
-    background-color: #2a8c56;
+.createNote{ /*button*/
+    background-color: #FF7EB9;
+    color:#f0f0f0;
     height: 100px;
     width: 600px;
+    border-radius: 12px;
     position: fixed;
     bottom: 10px;
+    opacity: 0.9;
+    filter: alpha(opacity=90);
+    border: none;
     align-self: center;
     margin-left: 30%;
     margin-right: 30%;
@@ -44,8 +42,6 @@ body {
 iframe {
     width: 50%; /* Set the width of the iframe */
     height: 4000px; /* Set the height of the iframe */
-    align-self: center;
-    align-items: center;
     border:none;
     margin-left: 30%;
     margin-right: 30%;
